fixed align center

--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,15 @@ figure img {
     width: 100%;
 }
 
-.smallImages {
-    max-width: 60%;
-    
-}
-
-.howItWorks {
+.howItWorks  {
     max-width: 100%;
     display: flex;      
     flex-direction: column;
     align-items: center;
+}
+
+.smallImages {
+    max-width: 60%;
+    align-items: center;
+    margin: 0 auto;
 }
